tests/e2e/pass/v1_for_range.ep
# EXIT: 0
# STDOUT: 0
# STDOUT: 1
# STDOUT: 2
# STDOUT: 3
fun main(): void {
    let end = 4
    for i: 0:end {
        println(str(i))
        end = end + 1
    }
    for j: end:end {
        println(str(j))
    }
    exit(0)
}
