tests/e2e/fail/callback_address_main.ep
# COMPILE_ERROR: ptr cannot take the address of main

fun main(): void {
    let callback = ptr(main)
}
